# feedback-intelligence

./: .gitignore  README.md  Real_Time_Retail_Feedback_Intelligence_Full_code.ipynb  clothing_reviews_cleaned.csv  pyproject.toml
