[project]
name = "generative-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.19.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tenacity>=9.1.4",
    "wordcloud>=1.9.6",
]
